--- a/literatur.bib
+++ b/literatur.bib
@@ -5,7 +5,7 @@
                 year = "2009" }
           
 @article{ptgl1,
-  title={PTGL: a database for secondary structure-based protein topologies},
+  title={{PTGL}: a database for secondary structure-based protein topologies},
   author={May, Patrick and Kreuchwig, Annika and Steinke, Thomas and Koch, Ina},
   journal={Nucleic acids research},
   volume={38},
@@ -89,7 +89,7 @@
                 
           
 @article{pdbefold,
-  title={Secondary-structure matching (SSM), a new tool for fast protein structure alignment in three dimensions},
+  title={Secondary-structure matching ({SSM}), a new tool for fast protein structure alignment in three dimensions},
   author={Krissinel, E and Henrick, K},
   journal={Acta Crystallographica Section D: Biological Crystallography},
   volume={60},
@@ -100,7 +100,7 @@
 }
 
 @article{top500,
-  title={Structure validation by C$\alpha$ geometry: $\phi$, $\psi$ and C$\beta$ deviation},
+  title={Structure validation by {C}$\alpha$ geometry: $\phi$, $\psi$ and C$\beta$ deviation},
   author={Lovell, Simon C and Davis, Ian W and Arendall, W Bryan and de Bakker, Paul IW and Word, J Michael and Prisant, Michael G and Richardson, Jane S and Richardson, David C},
   journal={Proteins: Structure, Function, and Bioinformatics},
   volume={50},
@@ -111,7 +111,7 @@
 }
 
 @article{zhangtm,
-  title={TM-align: a protein structure alignment algorithm based on the TM-score},
+  title={{TM}-align: a protein structure alignment algorithm based on the {TM}-score},
   author={Zhang, Yang and Skolnick, Jeffrey},
   journal={Nucleic acids research},
   volume={33},
@@ -148,7 +148,7 @@
 }
 
 @article{shindyalov1998protein,
-  title={Protein structure alignment by incremental combinatorial extension (CE) of the optimal path.},
+  title={Protein structure alignment by incremental combinatorial extension ({CE}) of the optimal path.},
   author={Shindyalov, Ilya N and Bourne, Philip E},
   journal={Protein engineering},
   volume={11},
@@ -164,8 +164,8 @@
   journal={GCB 2013 G{\"o}ttingen-Poster Abstracts}
 }
 
-@article{sillitoe2014cath,
-  title={CATH: comprehensive structural and functional annotations for genome sequences},
+@article{cath,
+  title={{CATH}: comprehensive structural and functional annotations for genome sequences},
   author={Sillitoe, Ian and Lewis, Tony E and Cuff, Alison and Das, Sayoni and Ashford, Paul and Dawson, Natalie L and Furnham, Nicholas and Laskowski, Roman A and Lee, David and Lees, Jonathan G and others},
   journal={Nucleic acids research},
   pages={gku947},
@@ -181,6 +181,17 @@
   pages={40--49},
   year={2015},
   publisher={Elsevier}
+}
+
+@article{scope,
+  title={SCOPe: Structural Classification of Proteins—extended, integrating SCOP and ASTRAL data and classification of new structures},
+  author={Fox, Naomi K and Brenner, Steven E and Chandonia, John-Marc},
+  journal={Nucleic acids research},
+  volume={42},
+  number={D1},
+  pages={D304--D309},
+  year={2014},
+  publisher={Oxford Univ Press}
 }
 
 
